# raytracing-gpu

./: .gitmodules  CMakeLists.txt
include/raytracing/: camera.hpp  light.hpp  lights.hpp  materials.hpp  scene.hpp  sphere.hpp  spheres.hpp
lib/: CMakeLists.txt
src/: camera.cpp  light.cpp  lights.cpp  main.cpp  materials.cpp  scene.cpp  sphere.cpp  spheres.cpp
src/shaders/: raytracing.glsl
